--- a/gps/etc/gps.conf
+++ b/gps/etc/gps.conf
@@ -8,7 +8,7 @@ XTRA_SERVER_3=http://xtrapath3.izatcloud.net/xtra2.bin
 #AUTO    = 1
 #XTRA2   = 2
 #XTRA3   = 3
-XTRA_VERSION_CHECK=1
+XTRA_VERSION_CHECK=0
 
 # Error Estimate
 # _SET = 1
@@ -65,15 +65,15 @@ CAPABILITIES=0x37
 
 # Accuracy threshold for intermediate positions
 # less accurate positions are ignored, 0 for passing all positions
-# ACCURACY_THRES=5000
+ACCURACY_THRES=70
 
 ################################
 ##### AGPS server settings #####
 ################################
 
 # FOR SUPL SUPPORT, set the following
-SUPL_HOST=supl.host.com or IP
-SUPL_PORT=1234
+SUPL_HOST=supl.google.com
+SUPL_PORT=7276
 
 # FOR C2K PDE SUPPORT, set the following
 # C2K_HOST=c2k.pde.com or IP
